[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/sprites/Scene/bound.png" type="Texture" id=1]
[ext_resource path="res://src/Rooms/Floors.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Rooms/Walls.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprites/Scene/castle.jpg" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Scene/Background/castle_1.png" type="Texture" id=6]
[ext_resource path="res://src/Rope/Rope.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Rooms/Room5.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Scenes/Level.gd" type="Script" id=10]
[ext_resource path="res://src/Rooms/Room.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Rooms/Room2.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Rooms/Room4.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/Rooms/Room3.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/sprites/Scene/Background/castle_top_small.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 379.41, 12.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 1564, 5 )

[node name="Room" type="Node2D"]
script = ExtResource( 10 )

[node name="RoomList" type="Node2D" parent="."]
z_index = -4

[node name="Room5_room" parent="RoomList" instance=ExtResource( 8 )]
position = Vector2( -1561, 470 )

[node name="Room2_room" parent="RoomList" instance=ExtResource( 12 )]
position = Vector2( 520, 470 )

[node name="Room2_room2" parent="RoomList" instance=ExtResource( 12 )]
position = Vector2( 1040, 470 )

[node name="Room1_room2" parent="RoomList" instance=ExtResource( 11 )]
position = Vector2( 0, 470 )

[node name="Room4_room" parent="RoomList" instance=ExtResource( 13 )]
position = Vector2( -1040, 470 )

[node name="Room4_room2" parent="RoomList" instance=ExtResource( 13 )]
position = Vector2( -520, 470 )

[node name="Room3_room" parent="RoomList" instance=ExtResource( 14 )]
visible = false
position = Vector2( 0, 232 )

[node name="Room3_room2" parent="RoomList" instance=ExtResource( 14 )]
visible = false
position = Vector2( 0, 470 )

[node name="Room4_room_secondFloor" parent="RoomList" instance=ExtResource( 13 )]
position = Vector2( 0, 237 )
z_index = -5

[node name="Room4_room_secondFloor2" parent="RoomList" instance=ExtResource( 13 )]
position = Vector2( -521, 237 )
z_index = -5

[node name="Room4_room_secondFloor3" parent="RoomList" instance=ExtResource( 13 )]
position = Vector2( -1040, 237 )
z_index = -5

[node name="Room3_room3" parent="RoomList" instance=ExtResource( 14 )]
position = Vector2( -1561, 237 )
z_index = -5

[node name="Room2_room3" parent="RoomList" instance=ExtResource( 12 )]
position = Vector2( 1040, 237 )
z_index = -5

[node name="Room2_room4" parent="RoomList" instance=ExtResource( 12 )]
position = Vector2( 520, 237 )
z_index = -5

[node name="Room2_room_thirdFloor" parent="RoomList" instance=ExtResource( 12 )]
position = Vector2( 520, 0 )
z_index = -10

[node name="Room5_room2" parent="RoomList" instance=ExtResource( 8 )]
position = Vector2( 1040, 0 )
scale = Vector2( -1, 1 )
z_index = -10

[node name="Rope" parent="." instance=ExtResource( 7 )]
position = Vector2( 1120, 400 )
scale = Vector2( 0.5, 0.35 )
z_index = -50

[node name="Rope3" parent="." instance=ExtResource( 7 )]
position = Vector2( 600, 115 )
scale = Vector2( 0.5, 0.33 )
z_index = -50

[node name="Rope2" parent="." instance=ExtResource( 7 )]
position = Vector2( -1160, 245 )
scale = Vector2( 0.586, 0.5 )
z_index = -50

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -213, -170 )
scale = Vector2( 0.593738, 0.585809 )
z_index = -500
texture = ExtResource( 5 )

[node name="OuterWalls" type="StaticBody2D" parent="."]
collision_mask = 273

[node name="Node2D" parent="OuterWalls" instance=ExtResource( 3 )]
position = Vector2( -1820, 100 )
scale = Vector2( 1, 50 )

[node name="Wall" parent="OuterWalls" instance=ExtResource( 3 )]
position = Vector2( 1310, 100 )
scale = Vector2( 1, 50 )

[node name="Floor" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( 0, 604 )
scale = Vector2( 5, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="OuterWalls/Floor"]
position = Vector2( 0.599983, 0 )
scale = Vector2( 11, 0.25 )
texture = ExtResource( 1 )

[node name="InnerWalls" type="StaticBody2D" parent="."]
collision_mask = 273

[node name="Node2D" parent="InnerWalls" instance=ExtResource( 2 )]
position = Vector2( -30, 350 )
scale = Vector2( 107, 1 )

[node name="Node2D2" parent="InnerWalls" instance=ExtResource( 2 )]
position = Vector2( -1520, 350 )
scale = Vector2( 30, 1 )

[node name="Node2D3" parent="InnerWalls" instance=ExtResource( 2 )]
position = Vector2( 1250, 350 )
scale = Vector2( 7, 1 )

[node name="Node2D4" parent="InnerWalls" instance=ExtResource( 2 )]
position = Vector2( 989, 116 )
scale = Vector2( 33, 1 )

[node name="Node2D5" parent="InnerWalls" instance=ExtResource( 2 )]
position = Vector2( -1520, 116 )
scale = Vector2( 30, 1 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="InnerWalls"]
position = Vector2( -257, -120 )
shape = SubResource( 10 )

[node name="Node2D6" parent="InnerWalls" instance=ExtResource( 2 )]
position = Vector2( -275, 116 )
scale = Vector2( 82, 1 )

[node name="TimeToLoad" type="Timer" parent="."]
pause_mode = 2
wait_time = 5.0
one_shot = true
autostart = true

[node name="TimeToLoadCounter" type="Label" parent="TimeToLoad"]
anchor_left = 0.168
anchor_top = 0.437
anchor_right = 0.168
anchor_bottom = 0.437
margin_left = -19.84
margin_top = -26.56
margin_right = 20.16
margin_bottom = 27.44

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="BackgroundDay" type="Sprite" parent="."]
visible = false
position = Vector2( 986, -24 )
scale = Vector2( 3, 3 )
z_index = -500

[node name="BackgroundNight" type="Sprite" parent="."]
visible = false

[node name="CastleRight" type="Sprite" parent="."]
position = Vector2( 1700, -215 )
scale = Vector2( 0.3, 0.3 )
z_index = -450
texture = ExtResource( 6 )

[node name="CastleLeft" type="Sprite" parent="."]
position = Vector2( -1880, -215 )
scale = Vector2( -0.3, 0.3 )
z_index = -450
texture = ExtResource( 6 )

[node name="CastleTop" type="Sprite" parent="."]
position = Vector2( -164, -384 )
scale = Vector2( -0.299325, 0.3 )
z_index = -550
texture = ExtResource( 15 )

[connection signal="timeout" from="TimeToLoad" to="." method="_on_TimeToLoad_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
